feat: update finance_doc
